--- a/bert_uniformat_cls_rseed42_with_prompt.ipynb
+++ b/bert_uniformat_cls_rseed42_with_prompt.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "(20469, 6823, 6824)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,6 +168,7 @@
     "label_encoder = LabelEncoder()\n",
     "encoded_labels = label_encoder.fit_transform(labels)\n",
     "\n",
+    "all_labels_encoded = encoded_labels[texts.index]\n",
     "train_labels_encoded = encoded_labels[train_texts.index]\n",
     "validation_labels_encoded = encoded_labels[validation_texts.index]\n",
     "test_labels_encoded = encoded_labels[test_texts.index]"
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +300,8 @@
     "    )\n",
     "    return DataLoader(dataset, batch_size=batch_size)\n",
     "\n",
-    "train_loader = make_dataloader(train_texts.tolist(), train_labels_encoded, batch_size)\n",
+    "train_loader = make_dataloader(texts.tolist(), all_labels_encoded, batch_size)  # for test\n",
+    "# train_loader = make_dataloader(train_texts.tolist(), train_labels_encoded, batch_size)\n",
     "validation_loader = make_dataloader(validation_texts.tolist(), validation_labels_encoded, batch_size)\n",
     "test_loader = make_dataloader(test_texts.tolist(), test_labels_encoded, batch_size)"
    ]
