Add gpt-2/4 balancing results

--- a/notebooks/bert_uniformat_classification_rseed42_epoch5_gpt2_balancing.ipynb
+++ b/notebooks/bert_uniformat_classification_rseed42_epoch5_gpt2_balancing.ipynb
@@ -93,7 +93,7 @@
     "experiment_setting = {\n",
     "    'rseed': rseed, \n",
     "    'epoch_size': epoch_size,\n",
-    "    'balancing': 'simple_balancing' # '', 'simple_balancing', 'gpt2_balancing', 'gpt4_balancing'\n",
+    "    'balancing': 'gpt2_balancing' # '', 'simple_balancing', 'gpt2_balancing', 'gpt4_balancing'\n",
     "}\n",
     "\n",
     "# for writing output file names.\n",
